# backend/models/Goal.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+
+const goalSchema = new mongoose.Schema({
+  user: { type: mongoose.Schema.Types.ObjectId, ref: 'User' },
+  title: { type: String, required: true },
+  target: { type: Number, required: true },
+  progress: { type: Number, default: 0 },
+  completed: { type: Boolean, default: false }
+});
+
+module.exports = mongoose.model('Goal', goalSchema);
